Remove tap highlight on mobile Chrome. Fixes #1

--- a/refresh-button.css
+++ b/refresh-button.css
@@ -10,9 +10,10 @@
 
 :host {
   display: block;
-  width:40px;
-  height:40px;
-  outline:none;
+  width: 40px;
+  height: 40px;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* To ensure your styling works under the Shadow DOM polyfill, see
